[gd_scene load_steps=5 format=2]

[ext_resource path="res://Adventurer.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Settings.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.196078, 0.215686, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsMenu" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="SettingsMenu"]
margin_right = 320.0
margin_bottom = 180.0

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenu/CenterContainer"]
margin_left = 116.0
margin_top = 32.0
margin_right = 203.0
margin_bottom = 148.0

[node name="CenterContainer" type="CenterContainer" parent="SettingsMenu/CenterContainer/VBoxContainer"]
margin_right = 87.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="SettingsMenu/CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 15.0
margin_right = 71.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 1 )
text = "Settings"

[node name="CenterContainer2" type="CenterContainer" parent="SettingsMenu/CenterContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 87.0
margin_bottom = 116.0

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenu/CenterContainer/VBoxContainer/CenterContainer2"]
margin_right = 87.0
margin_bottom = 96.0

[node name="CenterContainer" type="CenterContainer" parent="SettingsMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 87.0
margin_bottom = 16.0

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer"]
margin_left = 9.0
margin_right = 78.0
margin_bottom = 16.0

[node name="selector" type="Label" parent="SettingsMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 7.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = ">"

[node name="option" type="Label" parent="SettingsMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 11.0
margin_right = 69.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Setting 1"

[node name="CenterContainer2" type="CenterContainer" parent="SettingsMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 20.0
margin_right = 87.0
margin_bottom = 36.0

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2"]
margin_left = 7.0
margin_right = 80.0
margin_bottom = 16.0

[node name="selector" type="Label" parent="SettingsMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 7.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = ">"

[node name="option" type="Label" parent="SettingsMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_left = 11.0
margin_right = 73.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Setting 2"

[node name="CenterContainer3" type="CenterContainer" parent="SettingsMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 40.0
margin_right = 87.0
margin_bottom = 56.0

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3"]
margin_left = 7.0
margin_right = 80.0
margin_bottom = 16.0

[node name="selector" type="Label" parent="SettingsMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_right = 7.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = ">"

[node name="option" type="Label" parent="SettingsMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_left = 11.0
margin_right = 73.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Setting 3"

[node name="CenterContainer4" type="CenterContainer" parent="SettingsMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 60.0
margin_right = 87.0
margin_bottom = 76.0

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer4"]
margin_left = 7.0
margin_right = 80.0
margin_bottom = 16.0

[node name="selector" type="Label" parent="SettingsMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer4/HBoxContainer"]
margin_right = 7.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = ">"

[node name="option" type="Label" parent="SettingsMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer4/HBoxContainer"]
margin_left = 11.0
margin_right = 73.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Setting 4"

[node name="CenterContainer5" type="CenterContainer" parent="SettingsMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 80.0
margin_right = 87.0
margin_bottom = 96.0

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer5"]
margin_right = 87.0
margin_bottom = 16.0

[node name="selector" type="Label" parent="SettingsMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer5/HBoxContainer"]
margin_right = 7.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = ">"

[node name="option" type="Label" parent="SettingsMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer5/HBoxContainer"]
margin_left = 11.0
margin_right = 87.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Main menu"
